# bot247-inisghts

./: .env.example  .replit  dashboard_descriptions.json  main.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--role-assistant-content-Welcome-to-SIBM-Bengaluru-one-of-the-best-managem-1749464312948_1749464312949.txt  main_1750156250420.py  package_1749794438523.json  sample.py
frontend/: next.config.js  package.json
