
[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "supabase>=2.15.1",
    "textblob>=0.19.0",
    "python-supabase>=2.15.1",
    "typing-extensions>=4.12.2",
]
